--- a/main/mods/jei.pw.toml
+++ b/main/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items"
-filename = "jei-1.20.1-fabric-15.3.0.4.jar"
+filename = "jei-1.20.1-fabric-15.3.0.7.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/NsbSea5x/jei-1.20.1-fabric-15.3.0.4.jar"
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/L1uCKC92/jei-1.20.1-fabric-15.3.0.7.jar"
 hash-format = "sha1"
-hash = "d5e29fead4928513444b6005968fb6a6aa6aa8e8"
+hash = "ebf66ee403a6a8f401f848a6b690b6d9b952e563"
 
 [update]
 [update.modrinth]
 mod-id = "u6dRKJwZ"
-version = "NsbSea5x"
+version = "L1uCKC92"
