--- a/main/mods/blockus.pw.toml
+++ b/main/mods/blockus.pw.toml
@@ -1,13 +1,13 @@
 name = "Blockus"
-filename = "blockus-2.7.14+1.20.1.jar"
+filename = "blockus-2.7.15+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/zFiY2Go0/versions/YensC9Zq/blockus-2.7.14%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/zFiY2Go0/versions/v83bAtLU/blockus-2.7.15%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "932db52feee5313a134a08d5cef275ece21f964c"
+hash = "ae4c1e87726cb3530d1027680d90b94a7c94cba4"
 
 [update]
 [update.modrinth]
 mod-id = "zFiY2Go0"
-version = "YensC9Zq"
+version = "v83bAtLU"
