--- a/main/mods/jei.pw.toml
+++ b/main/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items"
-filename = "jei-1.20.1-fabric-15.3.0.7.jar"
+filename = "jei-1.20.1-fabric-15.3.0.8.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/L1uCKC92/jei-1.20.1-fabric-15.3.0.7.jar"
+url = "https://cdn.modrinth.com/data/u6dRKJwZ/versions/MtHhjBC2/jei-1.20.1-fabric-15.3.0.8.jar"
 hash-format = "sha1"
-hash = "ebf66ee403a6a8f401f848a6b690b6d9b952e563"
+hash = "883008503c38e4f3dddd16001a497cddc141a574"
 
 [update]
 [update.modrinth]
 mod-id = "u6dRKJwZ"
-version = "L1uCKC92"
+version = "MtHhjBC2"
