--- a/main/mods/moonlight.pw.toml
+++ b/main/mods/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.33-fabric.jar"
+filename = "moonlight-1.20-2.12.0-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/jzdBancr/moonlight-1.20-2.11.33-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/FwqXlCV8/moonlight-1.20-2.12.0-fabric.jar"
 hash-format = "sha1"
-hash = "7bf1487d2834339364b00762e89158f98c063b52"
+hash = "d1c4ca5727365e69be690c535d5eb617e354822a"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "jzdBancr"
+version = "FwqXlCV8"
