--- a/main/mods/simple-voice-chat.pw.toml
+++ b/main/mods/simple-voice-chat.pw.toml
@@ -1,13 +1,13 @@
 name = "Simple Voice Chat"
-filename = "voicechat-quilt-1.20.1-2.5.15.jar"
+filename = "voicechat-quilt-1.20.1-2.5.17.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/IQuSRpRK/voicechat-quilt-1.20.1-2.5.15.jar"
+url = "https://cdn.modrinth.com/data/9eGKb6K1/versions/ie9TZVHJ/voicechat-quilt-1.20.1-2.5.17.jar"
 hash-format = "sha1"
-hash = "297555e0c7b1ea34a6ca28b457d95441b970c9cf"
+hash = "4c5adf68b4a6ec5ab972b18a0ec38279918c3aca"
 
 [update]
 [update.modrinth]
 mod-id = "9eGKb6K1"
-version = "IQuSRpRK"
+version = "ie9TZVHJ"
