--- a/main/mods/supplementaries.pw.toml
+++ b/main/mods/supplementaries.pw.toml
@@ -3,11 +3,11 @@ filename = "supplementaries-1.20-2.8.15-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/UTyMA2SU/supplementaries-1.20-2.8.15-fabric.jar"
+url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/zOVMcKoT/supplementaries-1.20-2.8.15-fabric.jar"
 hash-format = "sha1"
-hash = "16d8a36acae348b4933fb40a7dbc395492193b18"
+hash = "87d8139366a362a99a8cad2478d3a7f26afa99f6"
 
 [update]
 [update.modrinth]
 mod-id = "fFEIiSDQ"
-version = "UTyMA2SU"
+version = "zOVMcKoT"
