--- a/main/mods/wthit.pw.toml
+++ b/main/mods/wthit.pw.toml
@@ -1,13 +1,13 @@
 name = "WTHIT"
-filename = "wthit-quilt-8.12.0.jar"
+filename = "wthit-quilt-8.13.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/i8Zf2Ziu/wthit-quilt-8.12.0.jar"
+url = "https://cdn.modrinth.com/data/6AQIaxuO/versions/2ThAsdYq/wthit-quilt-8.13.1.jar"
 hash-format = "sha1"
-hash = "9334d6f8517560c3e84d8a6f6057512a462c94fe"
+hash = "808f508a4ba7fec6fee5627d012038c68fe2992c"
 
 [update]
 [update.modrinth]
 mod-id = "6AQIaxuO"
-version = "i8Zf2Ziu"
+version = "2ThAsdYq"
